# betterquant

./: .gitignore  README.md  README_cn.md  build-sln-all.sh  build-sln.sh  cppclean.sh  deploy.sh  deploy_stgeng.sh  init-sys.sh  init-vim-with-gdb.sh  rebuild-sln-all.sh  rebuild-sln.sh  rebuild_stg.sh  rsync-inc-of-stgeng.sh  rsync-inc.sh  setting.sh  stop.sh  topbybq.sh
bqassetsmgr/: CMakeLists.txt
bqassetsmgr/cmake/: gtest.cmake  magic_enum.cmake
bqassetsmgr/inc/: AssetsMgr.hpp
bqassetsmgr/src/: AssetsMgr.cpp
bqdb/: del_test_data.sql  docker-compose.yaml  mysqldump.sh  run-db.sh  setting.sh
bqdb/sql/: BetterQuant.sql
bqipc/: CMakeLists.txt  test.gdb
bqipc/bench/: BenchMain.cpp  CMakeLists.txt
bqipc/cmake/: mimalloc.cmake
bqipc/docker/: Dockerfile
bqipc/inc/: SHMCli.hpp  SHMHeader.hpp  SHMIPC.hpp  SHMIPCBase.hpp  SHMIPCConst.hpp  SHMIPCDef.hpp  SHMIPCMsgId.hpp  SHMIPCPub.hpp  SHMIPCTask.hpp  SHMIPCUtil.hpp  SHMSrv.hpp  SHMUtil.hpp
bqipc/src/: SHMCli.cpp  SHMHeader.cpp  SHMIPCBase.cpp  SHMIPCUtil.cpp  SHMSrv.cpp  SHMUtil.cpp
bqipc/test/: CMakeLists.txt  TestMain.cpp
bqmd/bqmd-binance/: CMakeLists.txt  cfutures.gdb  cperp.gdb  futures.gdb  perp.gdb  spot.gdb
bqmd/bqmd-binance/cmake/: cpr.cmake  websocketpp.cmake
bqmd/bqmd-binance/docker/: Dockerfile
bqmd/bqmd-pub/: CMakeLists.txt  test.gdb
bqmd/bqmd-sim/: CMakeLists.txt  sim.gdb
bqmd/bqmd-svc-base/: CMakeLists.txt  build-proj.sh  md.gdb
bqordmgr/: CMakeLists.txt  build-proj.sh
bqordmgr/inc/: OrdMgr.hpp  OrdMgrDef.hpp  OrdMgrUtil.hpp
bqordmgr/src/: OrdMgr.cpp  OrdMgrUtil.cpp
bqposmgr/: CMakeLists.txt  build-proj.sh  config.hpp.in  test.gdb
bqposmgr/bench/: BenchMain.cpp
bqposmgr/inc/: PosMgr.hpp  PosMgrUtil.hpp
bqposmgr/src/: PosMgr.cpp  PosMgrUtil.cpp
bqposmgr/test/: CMakeLists.txt  TestMain.cpp
bqpub/: CMakeLists.txt  build-proj.sh  test.gdb
bqpub/bench/: CMakeLists.txt
bqpub/cmake/: boost.cmake  fmt.cmake
bqpub/inc/: BQPub.hpp
bqpub/test/: CMakeLists.txt  TestMain.cpp
bqriskmgr/: CMakeLists.txt  build-proj.sh  risk.gdb
bqriskmgr/cmake/: spdlog.cmake
bqriskmgr/config/: bqriskmgr.yaml
bqriskmgr/docker/: Dockerfile
bqriskmgr/inc/: ClientChannelGroup.hpp  Config.hpp  PubSvc.hpp  RiskMgr.hpp  RiskMgrConst.hpp  StgEngTaskHandler.hpp  TDGWTaskHandler.hpp
bqriskmgr/src/: ClientChannelGroup.cpp  Config.cpp  Main.cpp  PubSvc.cpp  RiskMgr.cpp  StgEngTaskHandler.cpp  TDGWTaskHandler.cpp
bqstg/bqstgeng-cxx/: CMakeLists.txt  build-proj.sh
bqstg/bqstgeng-cxx-demo/: CMakeLists.txt  build-proj.sh  config.hpp.in  demo.gdb
bqstg/bqstgeng-cxx-demo/bench/: BenchMain.cpp
bqstg/bqstgeng-cxx-demo/cmake/: config.cmake  gflags.cmake  gtest.cmake  mimalloc.cmake
bqstg/bqstgeng-cxx-demo/inc/: StgInstTaskHandlerOfCPerpTest.hpp  StgInstTaskHandlerOfPerpTest.hpp  StgInstTaskHandlerOfSpotPerfTest.hpp  StgInstTaskHandlerOfSpotTest.hpp
bqstg/bqstgeng-cxx-demo/src/: Main.cpp  StgInstTaskHandlerOfCPerpTest.cpp  StgInstTaskHandlerOfPerpTest.cpp  StgInstTaskHandlerOfSpotPerfTest.cpp  StgInstTaskHandlerOfSpotTest.cpp
bqstg/bqstgeng-cxx-demo/test/: CMakeLists.txt
bqstg/bqstgeng-py/: CMakeLists.txt  build-proj.sh  demo.gdb  run.sh
bqstg/bqstgeng-py-demo/: build-proj.sh  run.sh  stgeng-10000.py
bqstg/bqstgengdemo/: CMakeLists.txt
bqstg/bqstgengdemo/bench/: CMakeLists.txt
bqstg/bqstgengimpl/: CMakeLists.txt  demo.gdb
bqtd/bqtd-binance/: CMakeLists.txt  cfutures.gdb  cperp.gdb  futures.gdb  perp.gdb
bqtd/bqtd-pub/: CMakeLists.txt  build-proj.sh
bqtd/bqtd-srv/: CMakeLists.txt  td.gdb
bqtd/bqtd-srv-risk-plugin/: CMakeLists.txt
bqtd/bqtd-srv-risk-plugin-flow-ctrl/: CMakeLists.txt  build-proj.sh
bqtd/bqtd-svc-base/: CMakeLists.txt  build.sh  spot.gdb
bqweb/: CMakeLists.txt  build-proj.sh
bqweb-srv/: CMakeLists.txt  build-proj.sh  web.gdb
bqweb-srv/cmake/: boost.cmake  curl.cmake  fmt.cmake
bqweb-srv/config/: bqweb-srv.yaml  config.json
bqweb-srv/docker/: Dockerfile
bqweb-srv/inc/: Config.hpp  HisMD.hpp  WebSrv.hpp  WebSrvConst.hpp  bq_v1_ManualIntervention.hpp  bq_v1_QueryHisMD.hpp
bqweb-srv/src/: Config.cpp  HisMD.cpp  Main.cpp  WebSrv.cpp  bq_v1_ManualIntervention.cpp  bq_v1_QueryHisMD.cpp
bqweb/cmake/: concurrent_queue.cmake
bqweb/inc/: ConnMetadata.hpp  PingPongSvc.hpp  WSCli.hpp  WSTask.hpp  Web.hpp  WebConst.hpp  WebDef.hpp  WebParam.hpp
bqweb/src/: ConnMetaData.cpp  WSCli.cpp  WSTask.cpp  Web.cpp  WebParam.cpp
bqweb/test/: CMakeLists.txt
doc/: build.md  build_cn.md  caution.md  caution_cn.md  documentation.md  documentation_cn.md  installation.md  installation_cn.md  todo.md  todo_cn.md
docker/: clear.sh  create-acct-for-test.sh  create-acct.sh  docker-compose-tdgw-base.yaml  docker-compose-tdgw-template.yaml  docker-compose-tdgw.yaml  docker-compose.yaml  make-images.sh  reset.sh  run-base.sh  run-tdgw.sh  setting.sh  stop.sh
docker/docker-compose-tdgw/: README.md
pub/: CMakeLists.txt
pub/bench/: CMakeLists.txt
pub/cmake/: abseil.cmake  benchmark.cmake  cpr.cmake  mysqlcppconn.cmake  nlohmann_json.cmake  readerwriterqueue.cmake  spdlog.cmake
pub/inc/: Pub.hpp
pub/inc/db/: DBConnpool.hpp  DBE.hpp  DBEng.hpp  DBEngAsync.hpp  DBEngConst.hpp  DBEngDef.hpp  DBEngImpl.hpp  DBEngParam.hpp  DBEngSync.hpp  DBTask.hpp  TBLRecSetMaker.hpp
pub/inc/def/: Const.hpp  ConstIF.hpp  Def.hpp  DefExt.hpp  DefIF.hpp  StatusCode.hpp
pub/inc/util/: ConfigBase.hpp  Datetime.hpp  File.hpp  Float.hpp  FlowCtrlSvc.hpp  GZip.hpp  Json.hpp  Literal.hpp  Logger.hpp  Pch.hpp  PchBase.hpp  PchExt.hpp  ProgOpt.hpp  Random.hpp  ScheduleTaskBundle.hpp  Scheduler.hpp  SignalHandler.hpp  StdExt.hpp  String.hpp  SvcBase.hpp  TaskDispatcher.hpp  TaskDispatcherParam.hpp  Util.hpp
pub/src/db/: DBConnpool.cpp  DBE.cpp  DBEng.cpp  DBEngAsync.cpp  DBEngImpl.cpp  DBEngParam.cpp  DBEngSync.cpp
pub/src/util/: ConfigBase.cpp  Datetime.cpp  File.cpp  FlowCtrlSvc.cpp  GZip.cpp  Logger.cpp  Pch.cpp  Random.cpp  ScheduleTaskBundle.cpp  Scheduler.cpp  SignalHandler.cpp  String.cpp  SvcBase.cpp  TaskDispatcherParam.cpp  Util.cpp
pub/test/: CMakeLists.txt  TestMain.cpp
(+289 files in other folders)
